--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
 <!--     <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWkgJ-1vGWr_Qr2g0mb5syFZwFqhBR0s&callback=initMap&libraries=maps,marker&v=beta" defer>
+    </script>
+    <link rel="stylesheet" href="/src/index.css"/>
     <link rel="icon" type="image/png" href="/logo.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BobTheBuilders</title>
